<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="search" translatable="false">Поиск</string>
    <string name="settings" translatable="false">Настройки</string>
    <string name="media_library" translatable="false">Медиатека</string>
    <string name="dark_theme" translatable="false">Тёмная тема</string>
    <string name="share_the_app" translatable="false">Поделиться приложением</string>
    <string name="write_to_support" translatable="false">Написать в поддержку</string>
    <string name="user_agreement" translatable="false">Пользовательское соглашение</string>
    <string name="back" translatable="false">Назад</string>
    <string name="input_hint" translatable="false">Поиск</string>
    <string name="cancel" translatable="false">Отмена</string>


    <string name="android_course_url" translatable="false">Курс по Android-разработке: %s</string>
    <string name="course_url" translatable="false">https://praktikum.yandex.ru/android-developer/</string>

    <string name="email_address" translatable="false">Dezakpw@yandex.ru</string>
    <string name="email_subject" translatable="false">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_body" translatable="false">Спасибо разработчикам и разработчицам за крутое приложение!</string>


    <string name="agreement_url" translatable="false">https://yandex.ru/legal/practicum_offer/ru/</string>

    <string name="choose_app_to_share">Выберите приложение для отправки:</string>
    <string name="placeHolder">Название композиции (Песня)</string>
    <string name="artistName">Имя исполнителя</string>
    <string name="info">Инфо</string>
    <string name="artist_icon" />
    <string name="update">Обновить</string>
    <string name="nothing_was_found">Ничего не нашлось\n</string>
    <string name="error_connection">Проблемы со связью \n\n Загрузка не удалась.Проверьте \n подключение к интернету</string>
    <string name="dark_theme_settings">Тёмная тема</string>
    <string name="You_were_looking_for">Вы искали</string>
    <string name="Clear_the_history">Очистить историю</string>
    <string name="The_name_of_the_song">Название песни</string>
    <string name="executor">Исполнитель</string>
    <string name="duration">Длительность</string>
    <string name="collectionName">Альбом</string>
    <string name="Date">Год </string>
    <string name="primaryGenreName">Жанр</string>
    <string name="country">Страна</string>
    <string name="Your_library_is_empty">Ваша медиатека пуста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="New_playlist">Вы не создали\nни одного плейлиста</string>
    <string name="tab_playlists">Плейлисты</string>
    <string name="tab_favorites">Избранные треки</string>
    <string name="Mediateka">Медиатека</string>


</resources>