<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settings_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/DayNight">

    <!-- Заголовок настроек -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="16dp"
        android:text="@string/settings"
        android:textSize="@dimen/text_size_22"
       android:fontFamily="@font/ys_display_medium"/>

    <!-- Переключатель темы -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_61"
        android:layout_marginTop="24dp">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchDarkMode"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/marginStart_16"
            android:layout_marginTop="@dimen/marginTop_21"
            android:layout_marginEnd="@dimen/marginEnd_12"
            android:layout_marginHorizontal="60dp"
            android:textSize="@dimen/text_size_16"
            android:textColor="?attr/colorOnPrimary"
            android:text="@string/dark_theme_settings" />
    </FrameLayout>

    <!-- Поделиться приложением -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_61">

        <TextView
            android:id="@+id/shareApp"
            style="@style/SettingsStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share_the_app"
            app:drawableEndCompat="@drawable/ic_mode_24" />
    </FrameLayout>

    <!-- Написать в поддержку -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_61">

        <TextView
            android:id="@+id/supportButton"
            style="@style/SettingsStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/write_to_support"
            app:drawableEndCompat="@drawable/ic_support_24" />
    </FrameLayout>

    <!-- Пользовательское соглашение -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_61">

        <TextView
            android:id="@+id/userAgreementButton"
            style="@style/SettingsStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_agreement"
            app:drawableEndCompat="@drawable/light_mode3_24" />
    </FrameLayout>
</LinearLayout>
