<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="16dp"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="22sp">

        </TextView>

        <Button
            android:id="@+id/ic_vector_buck"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:backgroundTint="@color/white"
            app:icon="@drawable/ic_vector_buck"
            app:iconTint="@color/black"
            android:contentDescription="@string/buck">

        </Button>


    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginTop="24dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="11dp"
            android:text="@string/dark_theme"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:drawableEndCompat="@drawable/ic_switch" />


    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="61dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="12dp"
            android:text="@string/share_the_app"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:drawableEndCompat="@drawable/ic_mode" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="61dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="12dp"
            android:text="@string/write_to_support"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:drawableEndCompat="@drawable/ic_2" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="61dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="12dp"
            android:text="@string/user_agreement"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:drawableEndCompat="@drawable/light_mode3" />
    </FrameLayout>


</LinearLayout>