<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/DayNight"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNewPlaylist"
        style="@style/AppButton.BlackRounded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/new_playlist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/ivEmptyState"
        style="@style/ImageNothingWasFound_one"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="46dp"
        android:contentDescription="@string/Your_library_is_empty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnNewPlaylist" />

    <TextView
        android:id="@+id/tvEmptyState"
        style="@style/TextViewEmptyState_Two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/New_playlist"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/ivEmptyState"
        app:layout_constraintStart_toStartOf="@id/ivEmptyState"
        app:layout_constraintTop_toBottomOf="@id/ivEmptyState" />
</androidx.constraintlayout.widget.ConstraintLayout>
