<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:paddingTop="14dp"
            android:paddingStart="16dp"
            android:paddingEnd="210dp">

        </TextView>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="28dp"
        android:orientation="vertical">



        <Button
            android:id="@+id/button_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:backgroundTint="@color/white"
            android:text="@string/search"
            android:foreground="?attr/selectableItemBackground"
            android:textColor="@color/black"
            android:textSize="@dimen/text_22"
            android:textAllCaps="false"
            app:iconGravity="textStart"
            app:cornerRadius="@dimen/radius_16"
            app:icon="@drawable/button_search"
            app:iconTint="@color/black">

        </Button>

        <Button
            android:id="@+id/button_mediateka"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="3"
            android:backgroundTint="@color/white"
            android:text="@string/media_library"
            android:foreground="?attr/selectableItemBackground"
            android:textColor="@color/black"
            android:textSize="@dimen/text_22"
            android:textAllCaps="false"
            app:iconGravity="textStart"
            app:cornerRadius="@dimen/radius_16"
            app:icon="@drawable/button_mediateka"
            app:iconTint="@color/black">

        </Button>

        <Button
            android:id="@+id/button_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="3"
            android:backgroundTint="@color/white"
            android:text="@string/settings"
            android:foreground="?attr/selectableItemBackground"            android:textColor="@color/black"
            android:textSize="@dimen/text_22"
            android:textAllCaps="false"
            app:iconGravity="textStart"
            app:cornerRadius="@dimen/radius_16"
            app:icon="@drawable/button_settings"
            app:iconTint="@color/black">

        </Button>


    </LinearLayout>


</LinearLayout>