<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_61"
    style="@style/DayNight">


    <ImageView
        android:id="@+id/artworkIv"
        style="@style/ArtworkImageViewStyle"
        android:layout_marginStart="13dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/trackNameTv"
        style="@style/TrackNameTextViewStyle"
        android:text="@string/placeHolder"
        app:layout_constraintEnd_toStartOf="@id/actionIv"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="66dp"
        android:layout_marginTop="34dp"
        android:layout_marginBottom="14dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/artistNameTv"
            style="@style/TextSecondaryInfoOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artistName"
            />



        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_point" />



        <TextView
            android:id="@+id/trackTimeTv"
            style="@style/TextSecondaryInfoTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info" />

    </LinearLayout>

    <ImageView
        android:id="@+id/actionIv"
        style="@style/ActionIconStyle"
        android:src="@drawable/light_mode3_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>